# revm-simulation

./: .gitignore  Cargo.toml  Makefile.toml  README.md  diesel.toml
benches/: _arb.rs  arb.rs
contracts/: slither.config.json
contracts/script/: SimpleExecutor.s.sol  UniswapQuery.s.sol
contracts/src/: SimpleExecutor.sol  UniswapQuery.sol
contracts/test/: SimpleExecutor.t.sol  UniswapQuery.t.sol
doc/: arbitrage-search.md
infra/: base.yml  build.sh  docker.yml  fly.yml  geth.yml  inventory.yml  postgres.yml  prysm.yml  rust.yml
infra/group_vars/: all.yml
infra/templates/: base.service.j2  fly.service.j2  geth.service.j2  postgres.service.j2  prysm.service.j2
infra/templates/ssh_keys/: stas_rsa.pub  vlad_rsa.pub
migrations/2025-02-08-211333_create_factories/: down.sql  up.sql
migrations/2025-02-08-211350_create_tokens/: up.sql
migrations/2025-02-08-211903_create_pairs/: down.sql  up.sql
migrations/2025-02-14-010917_remove_total_supply_from_tokens/: up.sql
src/: bot.rs  core.rs  lib.rs  main.rs  schemas.rs
src/arb/: README.md  cycle.rs  cycle_quote.rs  market.rs  mod.rs  pool.rs  portfolio.rs  swap.rs  swap_quote.rs  swap_side.rs  test_helpers.rs  token.rs  types.rs  world.rs  world_update.rs
src/bootstrap/: mod.rs  types.rs
src/config/: mod.rs
src/db_service/: db_manager.rs  factory_service.rs  mod.rs  pair_service.rs  token_service.rs
src/models/: README.md  factory.rs  mod.rs  pair.rs  token.rs
src/notify/: mod.rs  slack.rs
src/revm_arbitrage/: mod.rs
src/revm_arbitrage/source/: helpers.rs  mod.rs
src/sync/: README.md  exchange_rates.rs  factories.rs  factory_pairs.rs  mod.rs  pair_created_events.rs  pair_tokens.rs  reserves.rs  subscriber.rs  sync_events.rs  usd.rs
src/utils/: README.md  app_context.rs  constants.rs  db_connect.rs  logger.rs  mod.rs  providers.rs  signer.rs  wallet.rs
