[package]
name = "fly"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
fern = "0.7.1"
log = "0.4.25"
chrono = "0.4.39"
serde_json = "1"
diesel = { version = "2.2.7", features = ["postgres"] }
fastrand = "2.0.1"
alloy = { version = "0.12.4", features = ["full"] }
alloy-network = { version = "0.12.4" }
alloy-provider = "0.12.4"
futures = "0.3.31"
futures-util = "0.3.31"
eyre = "0.6"
hex = "0.4.3"
url = "2.5.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
derive_more = { version = "1.0.0", features = ["display"] }
reqwest = { version = "0.11", features = ["json"] }
revm = { version = "19.5.0", features = ["alloydb"] }
anyhow = "1.0.97"
cacache = "13.1.0"
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "arb"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
cargo_common_metadata = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
