[package]
name = "fly"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
fern = "0.7.1"
log = "0.4.26"
chrono = "0.4.40"
serde_json = "1.0.140"
diesel = { version = "2.1.1", features = ["postgres", "chrono", "serde_json", "numeric"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
fastrand = "2.0.1"
alloy = { version = "0.11.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
eyre = "0.6"
hex = "0.4.3"
url = "2.5.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
derive_more = { version = "1.0.0", features = ["display"] }
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.14.0"
bigdecimal = "0.4.2"
indicatif = "0.17.11"
deadpool-postgres = "0.12"
tokio-postgres = "0.7"
bytes = "1.5.0"
deadpool = "0.9"
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "arb"
harness = false
